namespace Bridge;

public interface INotificationSender
{
    void Send(string message);
}