@startuml

title Bridge Class Diagram

interface INotificationSender{
  +void Send(string message)
}
abstract Notification{
  -INotificationSender
  +Notify(string message)
}

class WebSender
class SMSSender{
-List:string _telephoneCompanies
+SetCompanies(List:string telephoneCompanies)
}

class MessageNotification {
 +void saveDB(string message)
}
class AlertNotification 
class WarningNotification 



Notification *-- INotificationSender

WebSender ..> INotificationSender
SMSSender ..> INotificationSender 
Notification <|-- MessageNotification
Notification <|-- AlertNotification
Notification <|-- WarningNotification



@enduml